Add mongodb to package.json

--- a/public/views/snippets.html
+++ b/public/views/snippets.html
@@ -1,6 +1,7 @@
 <div class="snippet" ng-repeat="snippet in data.snippets">
   <div class="info">
     <div class="name">{{ snippet.name}}</div>
+    <a href="" class="delete" ng-click="deleteSnippet(snippet, $index)">Delete</a>
     <div class="properties">
       <pre>
         <code>
