Clean up code and add basic styling

--- a/public/views/create.html
+++ b/public/views/create.html
@@ -1,7 +1,7 @@
 <div class="add-snippet">
   <form name='snippetForm' ng-submit="enterSnippet()" novalidate>
     <input name='name' type="text" ng-model="snippet.name" placeholder="Enter snippet name here" required />
-    <textarea name='properties' type="text" ng-model="snippet.properties" required ></textarea>
+    <textarea rows="6" name='properties' type="text" ng-model="snippet.properties" required ></textarea>
     <button type="submit" value="Add">ADD</button>
   </form>
 </div>
