--- a/public/style.css
+++ b/public/style.css
@@ -119,7 +119,9 @@ html {
 --------------------------------------------- */
 
 body {
-  background-color: #eeeeee;
+  background-color: #ffffff;
+  color: #212121;
+  font-family: 'Source Code Pro', monospace;
   font-size: 18px;
   font-size: 1.8rem;
   line-height: 1.625;
@@ -127,6 +129,46 @@ body {
 
 /* ## Headings
 --------------------------------------------- */
+
+h1,
+h2,
+h3,
+h4,
+h5,
+h6 {
+  line-height: 1.4;
+  margin: 0 0 10px;
+}
+
+h1 {
+  font-size: 36px;
+  font-size: 3.6rem;
+}
+
+h2 {
+  font-size: 30px;
+  font-size: 3rem;
+}
+
+h3 {
+  font-size: 24px;
+  font-size: 2.4rem;
+}
+
+h4 {
+  font-size: 20px;
+  font-size: 2rem;
+}
+
+h5 {
+  font-size: 18px;
+  font-size: 1.8rem;
+}
+
+h6 {
+  font-size: 16px;
+  font-size: 1.6rem;
+}
 
 /* ## Objects
 --------------------------------------------- */
@@ -138,9 +180,101 @@ body {
 /* ## Forms
 --------------------------------------------- */
 
-/* ### Fields */
+input,
+select,
+textarea {
+  background-color: #fff;
+  border: 1px solid #ddd;
+  color: #333;
+  font-size: 18px;
+  font-size: 1.8rem;
+  font-weight: 400;
+  margin-bottom: 20px;
+  padding: 16px;
+  width: 100%;
+}
 
-/* ### Buttons */
+input:focus,
+textarea:focus {
+  border: 1px solid #3f51b5;
+  outline: none;
+}
+
+input[type="checkbox"],
+input[type="image"],
+input[type="radio"] {
+  width: auto;
+}
+
+::-moz-placeholder {
+  color: #333;
+  opacity: 1;
+}
+
+::-webkit-input-placeholder {
+  color: #333;
+}
+
+button,
+input[type="button"],
+input[type="reset"],
+input[type="submit"],
+.button {
+  background-color: #333;
+  border: 0;
+  color: #fff;
+  cursor: pointer;
+  font-size: 16px;
+  font-size: 1.6rem;
+  font-weight: 700;
+  padding: 16px 24px;
+  text-decoration: none;
+  white-space: normal;
+  width: auto;
+}
+
+button:hover,
+input:hover[type="button"],
+input:hover[type="reset"],
+input:hover[type="submit"],
+.button:hover,
+button:focus,
+input:focus[type="button"],
+input:focus[type="reset"],
+input:focus[type="submit"],
+.button:focus  {
+  background-color: #3f51b5;
+  color: #fff;
+}
+
+.button {
+  display: inline-block;
+}
+
+a.button.small,
+button.small,
+input[type="button"].small,
+input[type="reset"].small,
+input[type="submit"].small {
+  padding: 8px 16px;
+}
+
+.delete button {
+  cursor: not-allowed;
+  padding: 10px 16px;
+}
+
+.delete button:hover {
+  background-color: #333;
+  border: 0;
+  color: #fff;
+  cursor: not-allowed;
+}
+
+input[type="search"]::-webkit-search-cancel-button,
+input[type="search"]::-webkit-search-results-button {
+  display: none;
+}
 
 
 /* ## Tables
@@ -153,8 +287,18 @@ body {
 
 .wrap {
   margin: 0 auto;
-  max-width: 1280px;
+  max-width: 800px;
+  padding: 0 5%;
   width: 100%;
+}
+
+@media only screen and (min-width: 860px) {
+
+  .wrap {
+    max-width: 1280px;
+    padding: 0 40px;
+  }
+
 }
 
 /* ## Site Containers
@@ -172,13 +316,55 @@ body {
 /* # Site Header
 ==================================================================================================== */
 
+.site-header {
+  background-color: #3f51b5;
+  box-shadow: 0 2px 6px rgba(0, 0, 0, 0.2);
+}
+
+
 /* ## Title Area
 --------------------------------------------- */
 
-
+.site-title {
+  color: #ffffff;
+  margin-bottom: 0;
+  padding: 20px 0;
+  text-align: center;
+}
 
 /* # Site Navigation
 ==================================================================================================== */
+
+nav {
+  background-color: #f9fafa;
+  margin-bottom: 5%;
+}
+
+nav ul {
+  align-content: center;
+  display: flex;
+  flex-flow: column nowrap;
+  justify-content: center;
+  margin: 0;
+  padding: 0;
+}
+
+nav ul li {
+  list-style: none;
+}
+
+nav ul li a {
+  display: block;
+  padding: 20px;
+}
+
+@media only screen and (min-width: 860px) {
+
+  nav ul {
+    flex-flow: row nowrap;
+  }
+
+}
 
 /* ## Mobile Menu
 --------------------------------------------- */
@@ -194,6 +380,33 @@ body {
 
 /* ## Entries
 --------------------------------------------- */
+
+.snippet .header {
+  align-items: center;
+  display: flex;
+  flex-flow: column nowrap;
+  justify-content: center;
+}
+
+.snippet .properties {
+  background-color: #faf9f9;
+  border-left: 3px solid #3f51b5;;
+  padding: 0 20px;
+}
+
+@media only screen and (min-width: 860px) {
+
+  .snippet .header {
+    flex-flow: row nowrap;
+    justify-content: space-between;
+    align-items: flex-end;
+  }
+
+  .snippet .header h3 {
+    margin-bottom: 0;
+  }
+
+}
 
 /* ## Entry Meta
 --------------------------------------------- */
