--- a/public/views/snippets.html
+++ b/public/views/snippets.html
@@ -1,12 +1,11 @@
 <div class="snippet" ng-repeat="snippet in data.snippets">
   <div class="info">
-    <div class="name">{{ snippet.name}}</div>
+    <div class="header">
+      <h3 class="name">{{ snippet.name}}</h3>
+      <div class="delete"><button disabled>DELETE</button></div>
+    </div>
     <div class="properties">
-      <pre>
-        <code>
-          {{ snippet.properties }}
-        </code>
-      </pre>
+      <pre><code>{{snippet.properties}}</code></pre>
     </div>
   </div>
 </div>
